opam-version: "2.0"
maintainer:   "romain.calascibetta@gmail.com"
homepage:     "https://git.robur.coop/robur/jws"
bug-reports:  "https://git.robur.coop/robur/jws/issues"
dev-repo:     "git+https://github.com/robur-coop/jws.git"
doc:          "https://git.robur.coop/robur/jws"
license:      "MIT"
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
build:        [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
synopsis: "Implementation of JWS (RFC7515) with Jsont and mirage-crypto"
depends: [
  "ocaml" {>= "5.2.1"}
  "dune"  {>= "3.0"}
  "mirage-crypto-pk"
  "mirage-crypto-ec"
  "jsont"
  "bytesrw"
  "ounit2" {with-test}
  "fmt" {with-test}
  "x509" {with-test}
  "mirage-crypto-rng" {with-test}
]
